<resources>
    <string name="app_name">CloudData</string>

    <string name="create_object">Create Object</string>
    <string name="get_object">Get Object</string>
    <string name="update_object">Update Object</string>
    <string name="delete_object">Delete Object</string>
    <string name="primitive">Primitive</string>
    <string name="date">Date</string>
    <string name="pointer">Pointer</string>
    <string name="relation">Relation</string>
    <string name="geopoint">GeoPoint</string>
    <string name="upload_text">Upload Text</string>
    <string name="download_text">Download Text</string>
    <string name="create_geo_objects">Create GeoObjects</string>
    <string name="query_geo">Query Geo</string>
    <string name="query_box">Query Box</string>
    <string name="get_location">Get Current Location</string>
    <string name="increment">Increment</string>
    <string name="add_unique">Add Unique</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="add_relation">Add Relation</string>
    <string name="remove_relation">Remove Relation</string>
    <string name="create_query_objects">Create Query Objects</string>
    <string name="use_equals">Use Equals</string>
    <string name="use_scope">Use Scope</string>
    <string name="use_or">Use Or</string>
    <string name="use_counter">Use Counter</string>
    <string name="use_limit">Use Limit</string>
    <string name="use_regular">Use Regular</string>
    <string name="query_all">Query All</string>
    <string name="use_sub_query">Use Sub Query</string>
    <string name="use_in">Use In</string>
    <string name="create_relation_testdata">Create Relation Test Data</string>
    <string name="query_one_to_one">Query One to One</string>
    <string name="query_one_to_many">Query One to Many</string>
    <string name="create_role">Create Role</string>
    <string name="get_role">Get Role</string>
    <string name="create_acl">Create ACL</string>
    <string name="test_acl">Test ACL</string>
    <string name="default_acl">Default ACL</string>
    <string name="sign_up">Sign Up</string>
    <string name="anony2noram">Anonymous User to Normal User</string>
    <string name="become_user">Become Another User</string>
    <string name="request_email_verify">Request Email Verify</string>
    <string name="request_password_reset">Request Password Reset</string>
    <string name="logout">Logout</string>
    <string name="anonymous">Anonymous Login</string>
    <string name="login">Login</string>
    <string name="clear_log">Clear Log</string>
</resources>
