<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/create_query_objects_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_query_objects" />

            <Button
                android:id="@+id/equals_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_equals" />

            <Button
                android:id="@+id/scope_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_scope" />

            <Button
                android:id="@+id/or_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_or" />

            <Button
                android:id="@+id/counter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_counter" />

            <Button
                android:id="@+id/limit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_limit" />

            <Button
                android:id="@+id/regular_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_regular" />

            <Button
                android:id="@+id/query_all_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/query_all" />

            <Button
                android:id="@+id/sub_query_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_sub_query" />

            <Button
                android:id="@+id/in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_in" />

            <Button
                android:id="@+id/create_relation_testdata_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_relation_testdata" />

            <Button
                android:id="@+id/one2one_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/query_one_to_one" />

            <Button
                android:id="@+id/one2many_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/query_one_to_many" />

        </LinearLayout>

    </ScrollView>

    <fragment
        android:id="@+id/log_fragment"
        android:name="as.leap.demo.clouddata.log.LogFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>