<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/create_object_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_object" />

            <Button
                android:id="@+id/increment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increment" />

            <Button
                android:id="@+id/add_unique_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_unique" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add" />

            <Button
                android:id="@+id/remove_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

            <Button
                android:id="@+id/add_relation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_relation" />

            <Button
                android:id="@+id/remove_relation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_relation" />

        </LinearLayout>

    </ScrollView>


    <fragment
        android:id="@+id/log_fragment"
        android:name="com.maxleap.demo.clouddata.log.LogFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>