<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <Button
                android:id="@+id/anonymous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anonymous" />

            <Button
                android:id="@+id/log_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout" />

            <Button
                android:id="@+id/request_password_reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_password_reset" />

            <Button
                android:id="@+id/request_email_verify_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_email_verify" />

            <Button
                android:id="@+id/become_user_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/become_user" />

            <Button
                android:id="@+id/anony2normal_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anony2noram" />

        </LinearLayout>

    </ScrollView>

    <fragment
        android:id="@+id/log_fragment"
        android:name="as.leap.demo.clouddata.log.LogFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>