<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/primitive_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primitive" />

    <Button
        android:id="@+id/date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date" />

    <Button
        android:id="@+id/pointer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pointer" />

    <Button
        android:id="@+id/relation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relation" />

    <Button
        android:id="@+id/geo_point_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geopoint" />

    <fragment
        android:id="@+id/log_fragment"
        android:name="com.maxleap.demo.clouddata.log.LogFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>