<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/create_role_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_role" />

    <Button
        android:id="@+id/get_role_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_role" />

    <Button
        android:id="@+id/create_acl_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_acl" />

    <Button
        android:id="@+id/test_acl_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_acl" />

    <Button
        android:id="@+id/default_acl_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_acl" />

    <fragment
        android:id="@+id/log_fragment"
        android:name="as.leap.demo.clouddata.log.LogFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>