<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/create_geo_objects_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_geo_objects" />

    <Button
        android:id="@+id/query_geo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query_geo" />

    <Button
        android:id="@+id/query_box_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query_box" />

    <Button
        android:id="@+id/get_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_location" />

    <fragment
        android:id="@+id/log_fragment"
        android:name="as.leap.demo.clouddata.log.LogFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>