<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/create_object_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_object" />

    <Button
        android:id="@+id/get_object_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_object" />

    <Button
        android:id="@+id/update_object_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_object" />

    <Button
        android:id="@+id/delete_object_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_object" />

    <fragment
        android:id="@+id/log_fragment"
        android:name="com.maxleap.demo.clouddata.log.LogFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>